# poetry-docker-examples

./: .dockerignore  Makefile  README.md  basic-full-image.dockerfile  basic-slim-image-buildkit.dockerfile  basic-slim-image.dockerfile  layered-slim-image-buildkit.dockerfile  layered-slim-image-pip-wheels.dockerfile  layered-slim-image.dockerfile  multi-layered-slim-iamge.dockerfile  multi-layered-slim-image.dockerfile  pyproject.toml  run_build.sh
src/my_package/: __main__.py  main.py
