[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Matthew Hughes <matthewhughes934@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# Just a dependency with a C extension
uwsgi = "*"
# Random, moderately large dependency
flask = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
